# godot_racecar_example

./: CMakeLists.txt  Makefile  README.md  car_track.blend  car_track.blend1  fpga_racecar_model.blend  fpga_racecar_model.blend1  register_types.cpp  register_types.h  vehicle_bridge.cpp  vehicle_bridge.h
fpga-racecar/: car_track.glb  car_track.glb.import  fpga_racecar_model.glb  fpga_racecar_model.glb.import  fpga_racecar_model.tscn  icon.svg.import  node_3d.tscn  project.godot  vehicle_body_3d.gd  vehicle_body_3d.gd.uid  vehicle_bridge.gdextension  vehicle_bridge.gdextension.uid
fpga_racecar_verilog/: car_controller_testbench.cpp  car_controller_testbench.h  register_types.cpp  register_types.h  v_car_controller.v  v_counter.v  v_pwm_in.v  v_pwm_out.v
fpga_racecar_verilog/obj_dir/: Vv_car_controller.cpp  Vv_car_controller.h  Vv_car_controller.mk  Vv_car_controller__Syms.cpp  Vv_car_controller__Syms.h  Vv_car_controller___024root.h  Vv_car_controller___024root__DepSet_h3cdc1066__0.cpp  Vv_car_controller___024root__DepSet_h66e2c5ba__0.cpp  Vv_car_controller___024root__DepSet_h66e2c5ba__0__Slow.cpp  Vv_car_controller___024root__Slow.cpp  Vv_car_controller__pch.h  Vv_car_controller__ver.d  Vv_car_controller_classes.mk
include/core/: interfaces.h  ppm_encoder.h  tracked.h  verilated_car.h
src/core/: ppm_encoder.cpp
tests/: test_simulation.cpp
